--- a/NodeEditorApp/NodeEditorApp.vcxproj.filters
+++ b/NodeEditorApp/NodeEditorApp.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="Src\Editor\NodeFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\App\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Stdafx.h">
@@ -83,6 +86,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Editor\NodeFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\App\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -116,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Bin\x64-Debug\Config\Config.ini" />
+    <None Include="Bin\x64-Debug\Qss\Stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="Resource.qrc">
