--- a/NodeEditorApp/NodeEditorApp.vcxproj.filters
+++ b/NodeEditorApp/NodeEditorApp.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Src\App\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\App\Logger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Stdafx.h">
@@ -89,6 +92,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\App\Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\App\Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
