--- a/NodeEditorApp/NodeEditorApp.vcxproj
+++ b/NodeEditorApp/NodeEditorApp.vcxproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <ClCompile Include="Src\App\Application.cpp" />
     <ClCompile Include="Src\App\Logger.cpp" />
+    <ClCompile Include="Src\Editor\DmGraphicsEdge.cpp" />
     <ClCompile Include="Src\Editor\DmGraphicsScene.cpp" />
     <ClCompile Include="Src\Editor\DmGraphicsSocketItem.cpp" />
     <ClCompile Include="Src\Editor\DmGraphicsView.cpp" />
@@ -133,6 +134,7 @@
     <QtMoc Include="Src\Editor\DmGraphicsView.h" />
     <ClInclude Include="Src\App\Application.h" />
     <ClInclude Include="Src\App\Logger.h" />
+    <ClInclude Include="Src\Editor\DmGraphicsEdge.h" />
     <ClInclude Include="Src\Editor\DmGraphicsNode.h" />
     <ClInclude Include="Src\Editor\DmGraphicsSocketItem.h" />
     <ClInclude Include="Src\Editor\NodeFactory.h" />
