--- a/NodeEditorApp/NodeEditorApp.vcxproj.filters
+++ b/NodeEditorApp/NodeEditorApp.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="Src\App\Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Editor\DmGraphicsEdge.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Stdafx.h">
@@ -95,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\App\Logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Editor\DmGraphicsEdge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
