增加 assertion 模块

--- a/NodeEditorApp/NodeEditorApp.vcxproj.filters
+++ b/NodeEditorApp/NodeEditorApp.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="Src\Editor\DmGraphicsEdge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Utility\Assert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Stdafx.h">
