--- a/NodeEditorApp/NodeEditorApp.vcxproj
+++ b/NodeEditorApp/NodeEditorApp.vcxproj
@@ -127,6 +127,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Src\Utility\Assert.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Src\App\ListWidget.h" />
